add android aar artifact for schnorrkel supporting arm, arm64, x86 and x86_64

--- a/polkaj-schnorrkel/build.gradle
+++ b/polkaj-schnorrkel/build.gradle
@@ -3,13 +3,21 @@ apply from: '../common_java_app.gradle'
 dependencies {
 }
 
+sourceSets {
+    main {
+        java {
+            srcDirs = ["../polkaj-schnorrkel-common/src/main/java"]
+        }
+    }
+}
+
 test {
     systemProperty "java.library.path", file("${buildDir}/rust/release").absolutePath
 }
 
 task compileRust(type:Exec) {
-    workingDir 'src/rust'
-    commandLine 'cargo', 'build', '--release', '--target-dir=../../build/rust'
+    workingDir "../polkaj-schnorrkel-common/src/rust"
+    commandLine 'cargo', 'build', '--release', "--target-dir=${buildDir}/rust"
 }
 
 compileJava.dependsOn(compileRust)
