--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,8 @@ include "polkaj-ss58",
         "polkaj-json-types",
         "polkaj-scale-types",
         "polkaj-schnorrkel",
+        "polkaj-schnorrkel-common",
+        "polkaj-schnorrkel-android",
         "polkaj-common-types",
         "polkaj-api-base",
         "polkaj-api-http",
