--- a/polkaj-schnorrkel-android/src/main/AndroidManifest.xml
+++ b/polkaj-schnorrkel-android/src/main/AndroidManifest.xml
@@ -1,9 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="io.emeraldpay.polkaj">
-
-    <application android:allowBackup="true"
-                 android:supportsRtl="true">
-
-    </application>
-
+    <application />
 </manifest>
