--- a/polkaj-tx/build.gradle
+++ b/polkaj-tx/build.gradle
@@ -5,7 +5,7 @@ dependencies {
     api project(":polkaj-scale-types")
     api project(":polkaj-json-types")
     api project(":polkaj-ss58")
-    implementation project(":polkaj-schnorrkel")
+    compileOnly project(":polkaj-schnorrkel")
     api project(":polkaj-api-base")
 
     // for xxHash
