--- a/polkaj-tx/build.gradle
+++ b/polkaj-tx/build.gradle
@@ -11,4 +11,6 @@ dependencies {
     // for xxHash
     api 'net.openhft:zero-allocation-hashing:0.11'
     api 'org.bouncycastle:bcprov-jdk15on:1.65'
+
+    testImplementation project(":polkaj-schnorrkel")
 }
