--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,20 @@
 buildscript {
 
+    ext.kotlin_version = '1.5.30'
+    ext.kotlin_coroutine_version = '1.5.2'
+
+    repositories {
+        google()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+        mavenCentral()
+    }
     dependencies {
         classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:3.0.1'
+        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath "gradle.plugin.com.github.willir.rust:plugin:0.3.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
