--- a/polkaj-schnorrkel-android/build.gradle
+++ b/polkaj-schnorrkel-android/build.gradle
@@ -1,20 +1,7 @@
 import java.nio.file.Paths
 
-buildscript {
-    repositories {
-        google()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
-        classpath "gradle.plugin.com.github.willir.rust:plugin:0.3.4"
-    }
-}
-
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 apply plugin: "com.github.willir.rust.cargo-ndk-android"
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
@@ -30,7 +17,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
@@ -39,17 +26,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    
     sourceSets {
         main {
             java {
                 srcDirs = ["../polkaj-schnorrkel-common/src/main/java"]
             }
         }
+
     }
 }
 
+
 dependencies {
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'commons-codec:commons-codec:20041127.091804'
 }
 
 repositories {
