--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,19 +19,16 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: 11
 
       - name: Check
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: check
+        run: ./gradlew check
 
       - name: Build Coverage Report
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: coverageReport
+        run: ./gradlew coverageReport
 
       - name: Upload Coverage Report
         uses: codecov/codecov-action@v1
@@ -51,8 +48,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: ${{ matrix.java }}
 
       - name: Check
@@ -63,12 +61,13 @@ jobs:
           arguments: check
 
   # Make sure it works on supported Android versions
+  # Note: this action doesn't support running armv7 tests
   android-platform-test:
     runs-on: macos-latest
     strategy:
       matrix:
         api-level: [24, 25, 26, 27, 28, 29, 30]
-        arch: [x86_64, arm64-v8a, armeabi-v7a, x86]
+        arch: [x86_64, arm64-v8a, x86]
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -98,13 +97,12 @@ jobs:
           sudo update-locale LANG=${{ matrix.locale }}
 
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: 11
 
       - name: Check
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: check
+        run: ./gradlew check
         env:
           LANG: ${{ matrix.locale }}
