--- a/polkaj-api-ws/build.gradle
+++ b/polkaj-api-ws/build.gradle
@@ -5,6 +5,10 @@ compileJava {
     sourceCompatibility = '11'
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
 
 dependencies {
     api project(":polkaj-json-types")
