--- a/polkaj-api-okhttp/build.gradle
+++ b/polkaj-api-okhttp/build.gradle
@@ -18,6 +18,11 @@ compileJava {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 
+compileTestJava {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+
 dependencies {
     api project(":polkaj-json-types")
     api project(":polkaj-api-base")
