--- a/polkaj-adapter-tests/build.gradle
+++ b/polkaj-adapter-tests/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'java-library'
 apply plugin: 'groovy'
 
 compileJava {
-    targetCompatibility = '11'
-    sourceCompatibility = '11'
+    targetCompatibility = '8'
+    sourceCompatibility = '8'
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 dependencies {
