--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,13 +41,14 @@ jobs:
 
   # Run tests for java 8 targets
   java8-test:
-    name: Java 8 Test on ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ "windows-latest", "macos-latest", "ubuntu-latest" ]
-    runs-on: ${{ matrix.os }}
+    name: Java 8 Test
+    runs-on: "ubuntu-latest"
     steps:
+      - name: Checkout
       - uses: actions/checkout@v2
+
+      - name: Setup Rust
+        run: ./cargo_ndk_prep.sh
 
       - name: Set up JDK
         uses: actions/setup-java@v2
@@ -71,6 +72,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
+
+      - name: Setup Rust
+        run: ./cargo_ndk_prep.sh
 
       - name: Set up JDK
         uses: actions/setup-java@v2
@@ -97,6 +101,9 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
+      - name: Setup Rust
+        run: ./cargo_ndk_prep.sh
+
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -115,6 +122,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Setup Rust
+        run: ./cargo_ndk_prep.sh
 
       - name: Set Locale
         run: |
