--- a/common_java_app.gradle
+++ b/common_java_app.gradle
@@ -10,8 +10,12 @@ afterEvaluate {
     rootProject.tasks.coverageReport.sourceDirectories.setFrom rootProject.tasks.coverageReport.sourceDirectories.files + files(it.sourceSets.main.allSource.srcDirs)
     rootProject.tasks.coverageReport.classDirectories.setFrom rootProject.tasks.coverageReport.classDirectories.files + files(it.sourceSets.main.output)
 
+    //By default we set to java 8 but some project override this to higher levels so after evaluate we
     if(java.sourceCompatibility == JavaVersion.VERSION_1_8){
         rootProject.tasks.checkJava8.dependsOn(test)
+        tasks.withType(JavaCompile).all {
+            it.options.compilerArgs += ['--release', '8']
+        }
     }
 }
 
