--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -46,9 +46,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Rust
-        run: ./cargo_ndk_prep.sh
-
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
@@ -72,9 +69,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Rust
-        run: ./cargo_ndk_prep.sh
-
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
@@ -88,14 +82,19 @@ jobs:
           wrapper-cache-enabled: false
           arguments: check
 
-  # Make sure it works on supported Android versions
-  # Note: this action doesn't support running armv7 tests
+  #Test with android emulators provided
   android-platform-test:
     runs-on: macos-latest
     strategy:
       matrix:
         api-level: [24, 25, 26, 27, 28, 29, 30]
-        arch: [x86_64, arm64-v8a, x86]
+        arch: [x86_64, x86]
+        include:
+         - api-level: 24
+           arch: arm64-v8a
+         - api-level: 30
+           arch: arm64-v8a
+           target: google_apis
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -106,9 +105,9 @@ jobs:
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
+#          ndk: 21.4.7075529 ## This would install the NDK version, but it's already installed in the image.
           api-level: ${{ matrix.api-level }}
           arch: ${{ matrix.arch }}
-          profile: Nexus 6
           script: ./gradlew connectedCheck
 
   # Formatter may behave differently on different locales, makes sure tests are not failing
