--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -87,15 +87,18 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        api-level: [24, 25, 26, 27, 28, 29, 30]
+        api-level: [24, 25, 26, 27, 28, 29]
         arch: [x86_64, x86]
         include:
          - api-level: 30
            arch: arm64-v8a
            target: google_apis
-        exclude:
-          - api-level: 30
-            arch: x86
+        - api-level: 30
+          arch: x86
+          target: google_apis
+        - api-level: 30
+          arch: x86_64
+          target: google_apis
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -106,7 +109,7 @@ jobs:
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-#          ndk: 21.4.7075529 ## This would install the NDK version, but it's already installed in the image.
+#          ndk: 21.4.7075529 ## This would install the correct NDK version, but it's already installed in the image.
           api-level: ${{ matrix.api-level }}
           arch: ${{ matrix.arch }}
           script: ./gradlew connectedCheck
