--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -63,7 +63,7 @@ jobs:
           name: schnorrkel-lib
           path: polkaj-schnorrkel/build/rust/release
       - name: Setup Rust for Android
-        run: ./cargo_ndk_prep.sh
+        run: ./cargo_ndk_prep.sh; touch local.properties
       - name: Check
         uses: eskatos/gradle-command-action@v1
         with:
