--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -87,12 +87,15 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        api-level: [24, 25, 26, 27, 28, 29]
+        api-level: [24, 25, 26, 27, 28, 29, 30]
         arch: [x86_64, x86]
         include:
          - api-level: 30
-           arch: [arm64-v8a, x86, x86_64]
+           arch: arm64-v8a
            target: google_apis
+        exclude:
+          - api-level: 30
+            target: default
 
     steps:
       - name: checkout
