--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -89,7 +89,7 @@ jobs:
       matrix:
         api-level: [24, 25, 26, 27, 28, 29, 30]
         arch: [x86_64, x86]
-        target: default
+        target: [default]
         include:
          - api-level: 30
            arch: arm64-v8a
