--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -87,22 +87,13 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        api-level: [24, 25, 26, 27, 28, 29, 30]
+        api-level: [24, 25, 26, 28, 29, 30]
         arch: [x86_64, x86]
-        target: [default]
+        target: [google_apis]
         include:
          - api-level: 30
            arch: arm64-v8a
            target: google_apis
-         - api-level: 30
-           arch: x86_64
-           target: google_apis
-         - api-level: 30
-           arch: x86
-           target: google_apis
-        exclude:
-          - api-level: 30
-            target: default
 
     steps:
       - name: checkout
