--- a/polkaj-api-okhttp/build.gradle
+++ b/polkaj-api-okhttp/build.gradle
@@ -18,8 +18,6 @@ compileJava {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 
-
-
 dependencies {
     api project(":polkaj-json-types")
     api project(":polkaj-api-base")
@@ -30,4 +28,8 @@ dependencies {
 
     testImplementation 'org.java-websocket:Java-WebSocket:1.5.1'
     testImplementation project(":polkaj-adapter-tests")
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$kotlin_coroutine_version"
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.8.0")
+    testImplementation "io.mockk:mockk:1.12.0"
 }
