--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -89,9 +89,9 @@ jobs:
       matrix:
         api-level: [24, 25, 26, 28, 29, 30]
         arch: [x86_64, x86]
-        include:
-         - api-level: 30
-           arch: arm64-v8a
+#        include:
+#         - api-level: 30
+#           arch: arm64-v8a  ## Currently this github action isn't able to start any arm emulators
 
     steps:
       - name: checkout
