--- a/examples/rpc/build.gradle
+++ b/examples/rpc/build.gradle
@@ -13,11 +13,12 @@ apply from: '../common.gradle'
 dependencies {
     implementation "io.emeraldpay.polkaj:polkaj-api-http:$polkajVersion"
     implementation "io.emeraldpay.polkaj:polkaj-api-ws:$polkajVersion"
+    implementation "io.emeraldpay.polkaj:polkaj-api-okhttp:$polkajVersion"
     implementation "io.emeraldpay.polkaj:polkaj-json-types:$polkajVersion"
     implementation "io.emeraldpay.polkaj:polkaj-scale-types:$polkajVersion"
     implementation 'commons-codec:commons-codec:1.14'
 }
 
 application {
-    mainClassName = project.hasProperty("mainClass") ? getProperty("mainClass") : "ShowState"
+    mainClassName = findProperty("mainClass") ?: "ShowState"
 }
