undo always run tests

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,8 +3,8 @@ name: Tests
 on:
   # if pushed directly to the master
   push:
-#    branches:
-#      - master
+    branches:
+      - master
   # on a pull request
   pull_request:
     branches:
