--- a/common_java_app.gradle
+++ b/common_java_app.gradle
@@ -45,6 +45,7 @@ test {
     useJUnitPlatform()
     testLogging.showStandardStreams = true
     testLogging.exceptionFormat = 'full'
+    maxHeapSize = "2g"
 }
 
 // Must be after sourceSets closure
